fix(blog): Prevent text from overflowing & reorder recent posts on mobile (#2669)

--- a/src/styles/article-reader.scss
+++ b/src/styles/article-reader.scss
@@ -77,6 +77,11 @@
   }
 }
 
+.blog-container .recent-posts {
+  /* Place article before recent posts lists on mobile */
+  order: 1;
+}
+
 @media (max-width: 800px) {
   .article-reader {
     box-sizing: border-box;
